--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         />
+        <script src="script.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Playwrite+ES+Deco:wght@100..400&display=swap"
+            rel="stylesheet"
+        />
+
+        <link
+            href="https://fonts.googleapis.com/css2?family=Mansalva&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <div class="logo">Amine Assas</div>
@@ -19,44 +35,63 @@
                 <p class="subtitle">
                     Technicien supérieur en technologies numériques
                 </p>
-                <p>Toulouse, France</p>
+                <p class="tls">Toulouse, France</p>
             </div>
         </section>
         <section id="education">
             <div class="container">
-                <h2>Education</h2>
-                <div class="education">
-                    <h3>
-                        Technicien supérieur en technologies numériques, IPI
-                    </h3>
-                    <p>Bachelor 1: Toulouse, France (Present)</p>
+                <h2 class="ed">Éducation</h2>
+                <div class="education-card">
+                    <div class="education-details">
+                        <h3>
+                            Technicien supérieur en technologies numériques, IPI
+                        </h3>
+                        <p>Bachelor 1: Toulouse, France (Present)</p>
+                    </div>
                 </div>
-                <div class="education">
-                    <h3>Informatique, USTO</h3>
-                    <p>Licence 2: Oran, Algeria (2023)</p>
+                <div class="education-card">
+                    <div class="education-details">
+                        <h3>Informatique, USTO</h3>
+                        <p>Licence 2: Oran, Algeria (2023)</p>
+                    </div>
                 </div>
-                <div class="education">
-                    <h3>ENS d’informatique</h3>
-                    <p>Bachelor 1: SBA, Algeria (2022)</p>
+                <div class="education-card">
+                    <div class="education-details">
+                        <h3>ENS d’informatique</h3>
+                        <p>Bachelor 1: SBA, Algeria (2022)</p>
+                    </div>
                 </div>
-                <div class="education">
-                    <h3>Bac Mathématiques</h3>
-                    <p>BAC: Oran, Algeria (2021, Mention Très Bien)</p>
+                <div class="education-card">
+                    <div class="education-details">
+                        <h3>Bac Mathématiques</h3>
+                        <p>BAC: Oran, Algeria (2021, Mention Très Bien)</p>
+                    </div>
                 </div>
             </div>
         </section>
-        <section id="contact">
+        <section>
             <div class="container">
-                <h2>Contact</h2>
-                <p>
-                    Email:
+                <h2 class="contact">Contact</h2>
+                <p class="con">
+                    <b>Email:</b>
                     <a href="mailto:amineassas10@gmail.com" class="mail"
                         >amineassas10@gmail.com</a
                     >
                 </p>
-                <p>Phone: +33 6 26 92 75 00</p>
+                <p class="con"><b>Phone:</b> +33 6 26 92 75 00</p>
             </div>
         </section>
+        <div id="social-bar">
+            <a
+                href="https://www.linkedin.com/in/amine-assas-888756264/"
+                target="_blank"
+            >
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/amineassas31" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+        </div>
 
         <footer>
             <p>&copy; 2024 Amine Assas. All Rights Reserved.</p>
