--- a/education.html
+++ b/education.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Amine Assas</title>
-        <link rel="stylesheet" href="styles.css" />
+        <title>Education</title>
+        <link rel="stylesheet" href="edu_style.css" />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -31,47 +31,41 @@
         />
     </head>
     <body>
-        <div class="logo">Amine Assas</div>
+        <div class="logo">Éducation</div>
 
-        <section id="about">
-            <div class="container">
-                <h1 class="title">Amine Assas</h1>
-                <p class="subtitle">
-                    Technicien supérieur en technologies numériques
-                </p>
-                <p class="tls"><span class="material-symbols-outlined"> location_on </span> Toulouse, France</p>
-        </section>
-        <section class="container1">
-            <a href="education.html"
-                ><div class="card">
-                    <span class="material-symbols-outlined">school</span>
-                    <h2>Éducation</h2>
-                </div></a
-            >
-            <a href="http://"
-                ><div class="card">
-                    <span class="material-symbols-outlined">work</span>
-                    <h2>Éxperience</h2>
-                </div></a
-            >
-            <a href="http://"
-                ><div class="card">
-                    <span class="material-symbols-outlined">lightbulb</span>
-                    <h2>Compétence</h2>
-                </div></a
-            >
-        </section>
-
-        <section>
-            <div class="container2">
-                <h2 class="contact">Contactez moi</h2>
-                <p class="con">
-                    <b>Email:</b>
-                    <a href="mailto:amineassas10@gmail.com" class="mail"
-                        >amineassas10@gmail.com</a
-                    >
-                </p>
-                <p class="con"><b>Phone:</b> +33 6 26 92 75 00</p>
+        <section id="education">
+            <div>
+                <h1 class="ed">
+                    <span class="material-symbols-outlined"> school </span>
+                </h1>
+            </div>
+            <div class="container1">
+                <div class="education-card">
+                    <div class="education-details">
+                        <h3>
+                            Technicien supérieur en technologies numériques, IPI
+                        </h3>
+                        <p>Bachelor 2: Toulouse, France (Present)</p>
+                    </div>
+                </div>
+                <div class="education-card">
+                    <div class="education-details">
+                        <h3>Informatique, USTO</h3>
+                        <p>Licence 2: Oran, Algérie (2023)</p>
+                    </div>
+                </div>
+                <div class="education-card">
+                    <div class="education-details">
+                        <h3>ENS d’informatique</h3>
+                        <p>Bachelor 1: SBA, Algérie (2022)</p>
+                    </div>
+                </div>
+                <div class="education-card">
+                    <div class="education-details">
+                        <h3>Bac Mathématiques</h3>
+                        <p>BAC: Oran, Algérie (2021, Mention Très Bien)</p>
+                    </div>
+                </div>
             </div>
         </section>
         <div id="social-bar">
