--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
                 </div></a
             >
         </section>
+        <section class="container3">
+            <a href="CV Amine Assas.pdf" download >
+            <div class="download-btn"><span class="material-symbols-outlined">
+                download
+                </span>
+                CV
+            </div>
+        </a>
+        </section>
 
         <section>
             <div class="container2">
@@ -71,7 +80,7 @@
                         >amineassas10@gmail.com</a
                     >
                 </p>
-                <p class="con"><b>Phone:</b> +33 6 26 92 75 00</p>
+                <p class="con" style="text-decoration: none;"><b>Phone:</b> +33 6 26 92 75 00</p>
             </div>
         </section>
         <div id="social-bar">
