--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                 <p class="subtitle">
                     Technicien supérieur en technologies numériques
                 </p>
-                <p class="tls"><span class="material-symbols-outlined"> location_on </span> Toulouse, France</p>
+                <div class="location-container">
+                    <span class="material-symbols-outlined">location_on</span>
+                    <span class="tls" id="location-text">43.6045° N 1.4442° E</span>
+                </div>
         </section>
         <section class="container1">
             <a href="education.html"
