--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <h2>Éducation</h2>
                 </div></a
             >
-            <a href="http://"
+            <a href="experience.html"
                 ><div class="card">
                     <span class="material-symbols-outlined">work</span>
                     <h2>Éxperience</h2>
