--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
         <section id="about">
             <div class="container">
+                <img src="Photo.jpg" alt="">
                 <h1 class="title">Amine Assas</h1>
                 <p class="subtitle">
                     Technicien supérieur en technologies numériques
@@ -57,7 +58,7 @@
                     <h2>Éxperience</h2>
                 </div></a
             >
-            <a href="http://"
+            <a href="https://www.linkedin.com/in/amine-assas-888756264/details/skills/"
                 ><div class="card">
                     <span class="material-symbols-outlined">lightbulb</span>
                     <h2>Compétence</h2>
