--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
         />
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="logo">Amine Assas</div>
@@ -66,17 +67,18 @@
             >
         </section>
         <section class="container3">
-            <a href="CV Amine Assas.pdf" download >
-            <div class="download-btn"><span class="material-symbols-outlined">
-                download
-                </span>
-                CV
-            </div>
-        </a>
+            <t>Télécharger mon curriculum vitae</t>
+            <a href="CV Amine Assas.pdf" download>
+                <div class="download-btn">
+                    <span class="material-symbols-outlined" style="position:relative; top:4px; " >
+                        arrow_forward
+                        </span>
+                </div>
+            </a>
         </section>
 
-        <section>
-            <div class="container2">
+        <section class="container2">
+            <div >
                 <h2 class="contact">Contactez moi</h2>
                 <p class="con">
                     <b>Email:</b>
@@ -99,8 +101,6 @@
             </a>
         </div>
 
-        <footer>
-            <p>&copy; 2024 Amine Assas. All Rights Reserved.</p>
-        </footer>
+        
     </body>
 </html>
