--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="logo">Amine Assas</div>
+        <a class="logo" href="https://amineassas31.github.io/">Amine Assas</a>
 
         <section id="about">
             <div class="container">
