--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
         />
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <a class="logo" href="https://amineassas31.github.io/">Amine Assas</a>
@@ -39,7 +41,7 @@
                 <img src="Photo.jpg" alt="">
                 <h1 class="title">Amine Assas</h1>
                 <p class="subtitle">
-                    Étudiant en <a class="dev">{développement web}</a></p>
+                    Étudiant en <a class="dev">(développement web)</a></p>
                 <div class="location-container">
                     <a href="https://maps.app.goo.gl/Kyiqm9Xr1EcEHngi6" target="_blank"><span class="material-symbols-outlined">location_on</span></a>
                     <span class="tls" id="location-text">43.6045° N 1.4442° E</span>
@@ -111,83 +113,55 @@
         <div class="competences-container">
 
 
-            <!-- First competence group -->
-            <div class="competence-group">
-                <h3 class="competence-title">Algorithmes</h3>
-                <p class="skills-list">Complexité algorithmique, Langages formels, Théorie des graphes, Programmation dynamique, Structures de données.</p>
-                <hr />
-            </div>
 
-            <!-- Second competence group -->
             <div class="competence-group">
-                <h3 class="competence-title">Théories Informatiques</h3>
-                <p class="skills-list">Logique mathématique, Analyse numérique, Algèbre linéaire numérique, Mécanique classique, Analyse mathématique.</p>
-                <hr />
-            </div>
+                <div class="cmd-head">CMD.exe</div>
+                <h3 class="competence-title"><a class="dollar-prompt">$>&emsp;</a>Algorithmes</h3>
+                <p class="skills-list"><a class="prompt">>>>&emsp;</a>Complexité algorithmique, Langages formels, Théorie des graphes, Programmation dynamique, Structures de données.</p>
 
-            <!-- Third competence group -->
-            <div class="competence-group">
-                <h3 class="competence-title">Programmation</h3>
-                <p class="skills-list">C, C++, Java, Python, Pascal, LaTeX, PHP.</p>
-                <hr />
-            </div>
 
-            <!-- Fourth competence group -->
-            <div class="competence-group">
-                <h3 class="competence-title">Développement Web</h3>
-                <p class="skills-list">HTML, CSS, WAMP, Workbench.</p>
-                <hr />
-            </div>
+                <h3 class="competence-title"><a class=" dollar-prompt">$>&emsp;</a>Théories Informatiques</h3>
+                <p class="skills-list"><a class="prompt">>>>&emsp;</a>Logique mathématique, Analyse numérique, Algèbre linéaire numérique, Mécanique classique, Analyse mathématique.</p>
 
-            <!-- Fifth competence group -->
-            <div class="competence-group">
-                <h3 class="competence-title">Outils de Gestion de Versions</h3>
-                <p class="skills-list">Git, GitHub, Git BASH.</p>
-                <hr />
-            </div>
 
-            <!-- Sixth competence group -->
-            <div class="competence-group">
-                <h3 class="competence-title">Systèmes d'exploitation</h3>
-                <p class="skills-list">Linux (Ubuntu, Debian, Red Hat), Windows.</p>
-                <hr />
-            </div>
+                <h3 class="competence-title"><a class=" dollar-prompt">$>&emsp;</a>Programmation</h3>
+                <p class="skills-list"><a class="prompt">>>>&emsp;</a>C, C++, Java, Python, Pascal, LaTeX, PHP.</p>
 
-            <!-- Seventh competence group -->
-            <div class="competence-group">
-                <h3 class="competence-title">Bases de Données</h3>
-                <p class="skills-list">MySQL, PostgreSQL, Développement de bases de données.</p>
-                <hr />
-            </div>
 
-            <!-- Eighth competence group -->
-            <div class="competence-group">
-                <h3 class="competence-title">Réseaux et Virtualisation</h3>
-                <p class="skills-list">Packet Tracer, VMware Workstation.</p>
-                <hr />
-            </div>
+                <h3 class="competence-title"><a class=" dollar-prompt">$>&emsp;</a>Développement Web</h3>
+                <p class="skills-list"><a class="prompt">>>>&emsp;</a>HTML, CSS, WAMP, Workbench.</p>
 
-            <!-- Ninth competence group -->
-            <div class="competence-group">
-                <h3 class="competence-title">Matériel Informatique et Architecture</h3>
-                <p class="skills-list">Architecture des ordinateurs, Gestion de la mémoire, Multithreading, Assembleur x86.</p>
-                <hr />
-            </div>
 
-            <!-- Tenth competence group -->
-            <div class="competence-group">
-                <h3 class="competence-title">Langages Orientés Objet</h3>
-                <p class="skills-list">Langages orientés objets.</p>
-                <hr />
-            </div>
+                <h3 class="competence-title"><a class=" dollar-prompt">$>&emsp;</a>Outils de Gestion de Versions</h3>
+                <p class="skills-list"><a class="prompt">>>>&emsp;</a>Git, GitHub, Git BASH.</p>
 
-            <!-- Eleventh competence group -->
-            <div class="competence-group">
-                <h3 class="competence-title">Outils Divers</h3>
-                <p class="skills-list">MATLAB, Microsoft Excel, Adobe Illustrator.</p>
-                <hr />
+
+                <h3 class="competence-title"><a class=" dollar-prompt">$>&emsp;</a>Systèmes d'exploitation</h3>
+                <p class="skills-list"><a class="prompt">>>>&emsp;</a>Linux (Ubuntu, Debian, Red Hat), Windows.</p>
+
+
+                <h3 class="competence-title"><a class=" dollar-prompt">$>&emsp;</a>Bases de Données</h3>
+                <p class="skills-list"><a class="prompt">>>>&emsp;</a>MySQL, PostgreSQL, Développement de bases de données.</p>
+
+
+                <h3 class="competence-title"><a class=" dollar-prompt">$>&emsp;</a>Réseaux et Virtualisation</h3>
+                <p class="skills-list"><a class="prompt">>>>&emsp;</a>Packet Tracer, VMware Workstation.</p>
+
+
+                <h3 class="competence-title"><a class=" dollar-prompt">$>&emsp;</a>Matériel Informatique et Architecture</h3>
+                <p class="skills-list"><a class="prompt">>>>&emsp;</a>Architecture des ordinateurs, Gestion de la mémoire, Multithreading, Assembleur x86.</p>
+
+
+                <h3 class="competence-title"><a class=" dollar-prompt">$>&emsp;</a>Langages Orientés Objet</h3>
+                <p class="skills-list"><a class="prompt">>>>&emsp;</a>Langages orientés objets.</p>
+
+
+                <h3 class="competence-title"><a class=" dollar-prompt">$>&emsp;</a>Outils Divers</h3>
+                <p class="skills-list"><a class="prompt">>>>&emsp;</a>MATLAB, Microsoft Excel, Adobe Illustrator.</p>
+
             </div>
         </div>
+
 
 
 
