--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
         <title>Amine Assas</title>
         <link rel="stylesheet" href="styles.css" />
         <link
@@ -47,28 +48,19 @@
                     <span class="tls" id="location-text">43.6045° N 1.4442° E</span>
                 </div></div>
         </section>
+        <section class="container3">
+
+            <a href="https://github.com/amineassas31/Portfolio" download>
+                <div class="download-btn">
+                    <t>Portfolio personnel</t>
+                    <span class="material-symbols-outlined" style="position:relative; top:4px; left: 5px;" >
+                        arrow_forward
+                        </span>
+                </div>
+            </a>
+        </section>
+
         <section class="container1">
-<!--            <a href="education.html"-->
-<!--                ><div class="card">-->
-<!--                    <div class="card-logo-box"><span class="material-symbols-outlined">school</span></div>-->
-<!--                    -->
-<!--                    <h2>Éducation</h2>-->
-<!--                </div></a-->
-<!--            >-->
-<!--            <a href="experience.html"-->
-<!--                ><div class="card">-->
-<!--                    <div class="card-logo-box"><span class="material-symbols-outlined" > work</span></div>-->
-<!--                    -->
-<!--                    <h2>Éxperience</h2>-->
-<!--                </div></a-->
-<!--            >-->
-<!--            <a href="https://www.linkedin.com/in/amine-assas-888756264/details/skills/"-->
-<!--                ><div class="card">-->
-<!--                    <div class="card-logo-box"><span class="material-symbols-outlined">lightbulb</span></div>-->
-<!--                    -->
-<!--                    <h2>Compétence</h2>-->
-<!--                </div></a-->
-<!--            >-->
         </section>
         <div class="center-container">
 
@@ -161,25 +153,6 @@
 
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <section class="container3">
 
             <a href="CV STAGE 1.pdf" download>
