--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
         <title>Amine Assas</title>
         <link rel="stylesheet" href="styles.css" />
         <link
@@ -39,18 +38,25 @@
 
         <section id="about">
             <div class="container">
-                <img src="Photo.jpg" alt="">
+                <div class="image-container">
+                    <img src="Photo.jpg" alt="">
+                </div>
+
                 <h1 class="title">Amine Assas</h1>
                 <p class="subtitle">
-                    Étudiant en <a class="dev">(développement web)</a></p>
+                    Étudiant en <a class="dev">(développement web)</a>
+                </p>
                 <div class="location-container">
-                    <a href="https://maps.app.goo.gl/Kyiqm9Xr1EcEHngi6" target="_blank"><span class="material-symbols-outlined">location_on</span></a>
+                    <a href="https://maps.app.goo.gl/Kyiqm9Xr1EcEHngi6" target="_blank">
+                        <span class="material-symbols-outlined">location_on</span>
+                    </a>
                     <span class="tls" id="location-text">43.6045° N 1.4442° E</span>
-                </div></div>
+                </div>
+            </div>
         </section>
         <section class="container3">
 
-            <a href="https://github.com/amineassas31/Portfolio" download>
+            <a href="https://github.com/amineassas31/Portfolio">
                 <div class="download-btn">
                     <t>Portfolio personnel</t>
                     <span class="material-symbols-outlined" style="position:relative; top:4px; left: 5px;" >
@@ -59,47 +65,52 @@
                 </div>
             </a>
         </section>
+        <section class="container-skill1">
+                <div class="language-skill">
+                    <t>Java</t>
+                    <i class="fa-brands fa-java"></i>
 
-        <section class="container1">
+                </div>
+                <div class="language-skill">
+                    <t>C/C++</t>
+                    <i class="fa-brands fa-c"></i>
+
+                </div>
+                <div class="language-skill">
+                    <t>JavaScript</t>
+                    <i class="fa-brands fa-js"></i>
+
+                </div>
+                <div class="language-skill">
+                    <t>Python</t>
+                    <i class="fa-brands fa-python"></i>
+                </div>
+                <div class="language-skill">
+                    <t>HTML</t>
+                    <i class="fa-brands fa-html5"></i>
+
+                </div>
+                <div class="language-skill">
+                    <t>CSS</t>
+                    <i class="fa-brands fa-css3"></i>
+
+                </div>
+                <div class="language-skill">
+                    <t>PHP</t>
+                    <i class="fa-brands fa-php"></i>
+                </div>
+                <div class="language-skill">
+                    <t>Assembleur</t>
+                    <i class="fa-solid fa-laptop-code"></i>
+                </div>
         </section>
-        <div class="center-container">
 
-            <p class="logo2">Éducation</p>
-            <div class="card-logo-box"><span class="material-symbols-outlined">school</span></div>
 
-        </div>
-        <div class="container4">
-            <div class="education-card">
-                <div class="education-details">
-                    <h3>
-                        Technicien supérieur en technologies numériques, IPI
-                    </h3>
-                    <p>Bachelor 2: Toulouse, France (Present)</p>
-                </div>
-            </div>
-            <div class="education-card">
-                <div class="education-details">
-                    <h3>Informatique, USTO</h3>
-                    <p>Licence 2: Oran, Algérie (2023)</p>
-                </div>
-            </div>
-            <div class="education-card">
-                <div class="education-details">
-                    <h3>ENS d’informatique</h3>
-                    <p>Bachelor 1: SBA, Algérie (2022)</p>
-                </div>
-            </div>
-            <div class="education-card">
-                <div class="education-details">
-                    <h3>Bac Mathématiques</h3>
-                    <p>BAC: Oran, Algérie (2021, Mention Très Bien)</p>
-                </div>
-            </div>
-        </div>
+
         <div class="center-container">
 
             <p class="logo2">Compétences techniques</p>
-            <div class="card-logo-box"><span class="material-symbols-outlined">engineering</span></div>
+            <i class="fa-solid fa-code"></i>
 
         </div>
         <div class="competences-container">
@@ -153,11 +164,50 @@
 
             </div>
         </div>
-        <section class="container3">
+        <div class="center-container">
 
+            <p class="logo2">Éducation</p>
+            <i class="fa-solid fa-book-open"></i>
+
+        </div>
+        <section class="education-section">
+            <div class="resume-section">
+                <table>
+                    <tr>
+                        <td class="position position-now">Développement web</td>
+                        <td>
+                            <div class="company">IPI Toulouse</div>
+                            <div class="date date-now">Actuellement</div>
+                        </td>
+                    </tr>
+                    <tr class="crossed-out">
+                        <td class="position">Informatique</td>
+                        <td>
+                            <div class="company">IPI Toulouse</div>
+                            <div class="date">2023 - 2024</div>
+                        </td>
+                    </tr>
+                    <tr class="crossed-out">
+                        <td class="position">Informatique</td>
+                        <td>
+                            <div class="company">USTO</div>
+                            <div class="date">2022 - 2023</div>
+                        </td>
+                    </tr>
+                    <tr class="crossed-out">
+                        <td class="position">Math & Informatique</td>
+                        <td>
+                            <div class="company">ESI SBA</div>
+                            <div class="date">2021 - 2022</div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </section>
+        <section class="container3">
             <a href="CV STAGE 1.pdf" download>
                 <div class="download-btn">
-                    <t>Télécharger mon CV</t>
+                    <t>Mon CV</t>
                     <span class="material-symbols-outlined" style="position:relative; top:4px; left: 5px;" >
                         arrow_forward
                         </span>
@@ -179,7 +229,7 @@
         </section>
         <div id="social-bar">
             <a
-                href="https://www.linkedin.com/in/amine-assas-888756264/"
+                href="https://www.linkedin.com/in/amine-assas/"
                 target="_blank"
             >
                 <i class="fa-brands fa-linkedin"></i>
