--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         />
-        <link rel="stylesheet" href="exp_style.css" />
+        <link rel="stylesheet" href="projectsStyle.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -28,15 +28,46 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
         />
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_right_alt" />
     </head>
     <body>
-        <div class="logo">Éxperience</div>
+        <h1 id="title">Mes Projet</h1>
+        <section id="projects">
+            <div id="Anime">
+                <img src="Projects/AnimeWebsite/anime.png">
+                <h6>Terminé</h6>
+                <p>Application web qui utilise l'API Jikan pour rechercher des animes, personnages, mangas, clubs et personnalités. </p>
+                <div>
+                    <p>HTML</p>
+                    <p>CSS</p>
+                    <p>JavaScript</p>
+                    <p>API</p>
+                </div>
+                <a href="Projects/AnimeWebsite/index.html">
+                    <span class="material-symbols-outlined">
+                     arrow_right_alt
+                    </span>
+                </a>
 
-        <section id="about">
-            <div class="container">
-                <h1 class="title">Désolé, la seule expérience que j'ai est celle de la vie.</h1>
-                
+            </div>
         </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <div id="social-bar">
             <a
                 href="https://www.linkedin.com/in/amine-assas-888756264/"
