--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
         <section class="container3">
 
-            <a href="https://github.com/amineassas31/Portfolio">
+            <a href="Projects/AnimeWebsite/index.html">
                 <div class="download-btn">
                     <t>Portfolio personnel</t>
                     <span class="material-symbols-outlined" style="position:relative; top:4px; left: 5px;" >
