--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                     <p>JavaScript</p>
                     <p>API</p>
                 </div>
-                <a href="Projects/AnimeWebsite/index.html">
+                <a href="Projects/AnimeWebsite/">
                     <span class="material-symbols-outlined">
                      arrow_right_alt
                     </span>
