--- a/Projects/index.html
+++ b/Projects/index.html
@@ -35,7 +35,7 @@
         <h1 id="title">Mes Projet</h1>
         <section id="projects">
             <div id="Anime">
-                <img src="Projects/AnimeWebsite/anime.png">
+                <img src="AnimeWebsite/anime.png">
                 <h6>Terminé</h6>
                 <p>Application web qui utilise l'API Jikan pour rechercher des animes, personnages, mangas, clubs et personnalités. </p>
                 <div>
@@ -44,7 +44,7 @@
                     <p>JavaScript</p>
                     <p>API</p>
                 </div>
-                <a href="Projects/AnimeWebsite/">
+                <a href="AnimeWebsite">
                     <span class="material-symbols-outlined">
                      arrow_right_alt
                     </span>
