--- a/Projects/index.html
+++ b/Projects/index.html
@@ -51,6 +51,9 @@
                 </a>
 
             </div>
+            <div id="life-game">
+                
+            </div>
 
         </section>
 
