--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
 
     </head>
     <body>
-        <a class="logo" href="https://amineassas31.github.io/">Amine Assas</a>
-
         <section id="about">
             <div class="container">
                 <div class="image-container">
@@ -44,7 +42,7 @@
 
                 <h1 class="title">Amine Assas</h1>
                 <p class="subtitle">
-                    Étudiant en <a class="dev">(développement web)</a>
+                    Étudiant en <a class="dev">(développement web/logiciel)</a>
                 </p>
                 <div class="location-container">
                     <a href="https://maps.app.goo.gl/Kyiqm9Xr1EcEHngi6" target="_blank">
@@ -110,7 +108,7 @@
         <div class="center-container">
 
             <p class="logo2">Compétences techniques</p>
-            <i class="fa-solid fa-code"></i>
+
 
         </div>
         <div class="competences-container">
@@ -164,11 +162,9 @@
 
             </div>
         </div>
-        <div class="center-container">
+        <div class="center-container2">
 
             <p class="logo2">Éducation</p>
-            <i class="fa-solid fa-book-open"></i>
-
         </div>
         <section class="education-section">
             <div class="resume-section">
