--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </div>
         </section>
         <section class="container3">
-            <a href="CV STAGE 1.pdf" download>
+            <a href="CV%20-%20Stage.pdf" download>
                 <div class="download-btn">
                     <t>Mon CV</t>
                     <span class="material-symbols-outlined" style="position:relative; top:4px; left: 5px;" >
