--- a/Links/index.html
+++ b/Links/index.html
@@ -23,6 +23,7 @@
     <a href="https://www.linkedin.com/in/amine-assas/" class="icon-link" target="_blank">
       <i class="fa-brands fa-linkedin"></i>
     </a>
+    <a href="mailto:amineassas10@gmail.com" class="icon-link"><i class="fa-solid fa-envelope"></i></a>
   </div>
 </section>
 </body>
