--- a/Projects/AnimeWebsite/index.html
+++ b/Projects/AnimeWebsite/index.html
@@ -14,6 +14,7 @@
 
     </head>
     <body>
+        //formulaire
         <form>
             <input id="search" placeholder="Type and search" />
             <button type="submit">SEARCH</button>
